Allow for i18n and size adaptation
Text not hardcoded anymore and can be referenced from
messages.properties

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -11,3 +11,31 @@ Size.surname = Must include at least 2 characters
 Size.PublishForm.neighborhood = Must include at least 2 characters
 Size.PublishForm.subject = Must include at least 2 characters
 Size.PublishForm.message = Must include between 2 and 1 characters
+
+
+posted = posted 
+neiboSlogan = Slogan
+Announcements = Announcements
+Feed = Feed
+Contacts = Contacts
+CreateNewPost.tooltip = Create new post 
+CreateNewPost.button = Create new post
+CreatePost.title = Create a post
+PostedBy = Posted by
+Tags = Tags
+CommentSection = Comment section
+Name = Name
+Surname = Surname
+Email = E-Mail
+Neighborhood = Neighborhood
+Comment = Comment
+Comment.verb = Comment
+NoComments = There are still no comments
+User = User
+Error = Error
+GoBackToMainPage = Go back to main page
+Date = Date
+Subject = Subject
+Message = Message
+Image = Image
+Post.verb = Post
