--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -1,17 +1,23 @@
-Pattern.publishForm.name = Nombre solo debe contener caracteres alfanumericos
+Pattern.publishForm.name = Nombre solo debe contener letras
 NotBlank.publishForm.name = Nombre requerido
+Size.publishForm.name = Debe contener menos de 100 caracteres
+
+Pattern.publishForm.surname = The surname must only contain letters
 NotBlank.publishForm.surname = Apellido requerido
-NotBlank.PublishForm.neighborhood = Barrio requerido
-NotBlank.PublishForm.email = Email requerido
-NotBlank.PublishForm.subject = Sujeto requerido
-NotBlank.PublishForm.message = Mensaje requerido
+Size.publishForm.surname = Debe contener menos de 100 caracteres
 
-Size.PublishForm.name = Debe contener al menos 2 caracteres
-Size.PublishForm.surname = Debe contener al menos 2 caracteres
-Size.PublishForm.neighborhood = Debe contener al menos 2 caracteres
-Size.PublishForm.subject = Debe contener al menos 2 caracteres
-Size.PublishForm.message = Debe contener entre 2 y 1 caracteres
+NotBlank.publishForm.neighborhood = Vecindario requerido
+Size.publishForm.neighborhood = Debe contener menos de 100 caracteres
 
+NotBlank.publishForm.subject = Sujeto requerido
+Size.publishForm.subject = Debe contener menos de 100 caracteres
+
+NotBlank.publishForm.message = Mensaje requerido
+Size.publishForm.message = Debe contener menos de 255 caracteres
+
+NotBlank.publishForm.email = Email requerido
+Size.publishForm.email = Debe contener menos de 100 caracteres
+Email.publishForm.email = Debe ser un email válido
 
 posted = publicado
 neiboSlogan = Eslogan
