--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -1,16 +1,23 @@
-Pattern.name = The name must only be alphanumerical characters
-NotBlank.name = Name field is required
-NotBlank.publishForm.surname = Surname field is required
-NotBlank.publishForm.neighborhood = Neighborhood field is required
-NotBlank.publishForm.email = Email field is required
-NotBlank.publishForm.subject = Subject field is required
-NotBlank.publishForm.message = Message field is required
+Pattern.publishForm.name = The name must only contain letters
+NotBlank.publishForm.name = Name field is required
+Size.publishForm.name = Must be less than 100 characters
 
-Size.name = Must include at least 1 characters
-Size.surname = Must include at least 2 characters
-Size.PublishForm.neighborhood = Must include at least 2 characters
-Size.PublishForm.subject = Must include at least 2 characters
-Size.PublishForm.message = Must include between 2 and 1 characters
+Pattern.publishForm.surname = The surname must only contain letters
+NotBlank.publishForm.surname = Surname field is required
+Size.publishForm.surname = Must be less than 100 characters
+
+NotBlank.publishForm.neighborhood = Neighborhood field is required
+Size.publishForm.neighborhood = Must be less than 100 characters
+
+NotBlank.publishForm.subject = Subject field is required
+Size.publishForm.subject = Must be less than 100 characters
+
+NotBlank.publishForm.message = Message field is required
+Size.publishForm.message = Must be less than 255 characters
+
+NotBlank.publishForm.email = Email field is required
+Size.publishForm.email = Must be less than 100 characters
+Email.publishForm.email = Must be a valid email address
 
 
 posted = posted 
