Add special characters
Minor changes to enable visualization of special characters.

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -17,29 +17,29 @@ Size.publishForm.message = Debe contener menos de 255 caracteres
 
 NotBlank.publishForm.email = Email requerido
 Size.publishForm.email = Debe contener menos de 100 caracteres
-Email.publishForm.email = Debe ser un email v醠ido
+Email.publishForm.email = Debe ser un email v谩lido
 
 posted = publicado
-neiboSlogan = Eslogan
+neiboSlogan = Esl贸gan
 Announcements = Anuncios
 Feed = Feed
 Contacts = Contactos
-CreateNewPost.tooltip = Crear nueva publicaci髇
-CreateNewPost.button = Crear nueva publicaci髇
-CreatePost.title = Crear una publicaci髇
+CreateNewPost.tooltip = Crear nueva publicaci贸n
+CreateNewPost.button = Crear nueva publicaci贸n
+CreatePost.title = Crear una publicaci贸n
 PostedBy = Publicado por
 Tags = Etiquetas
-CommentSection = Secci髇 de comentarios
+CommentSection = Secci贸n de comentarios
 Name = Nombre
 Surname = Apellido
-Email = Correo electr髇ico
+Email = Correo electr贸nico
 Neighborhood = Vecindario
 Comment = Comentario
 Comment.verb = Comentar
-NoComments = A鷑 no hay comentarios
+NoComments = A煤n no hay comentarios
 User = Usuario
 Error = Error
-GoBackToMainPage = Volver a la p醙ina principal
+GoBackToMainPage = Volver a la p谩gina principal
 Date = Fecha
 Subject = Asunto
 Message = Mensaje
