--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -28,6 +28,9 @@ Contacts = Contacts
 CreateNewPost.tooltip = Create new post 
 CreateNewPost.button = Create new post
 CreatePost.title = Create a post
+CreateNewAdminPost.tooltip = Create new admin post
+CreateNewAdminPost.button = Create new admin post
+CreateAdminPost.title = Create a admin post
 PostedBy = Posted by
 Tags = Tags
 CommentSection = Comment section
