--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -30,7 +30,7 @@ CreateNewPost.button = Create new post
 CreatePost.title = Create a post
 CreateNewAdminPost.tooltip = Create new admin post
 CreateNewAdminPost.button = Create new admin post
-CreateAdminPost.title = Create a admin post
+CreateAdminPost.title = Create an admin post
 PostedBy = Posted by
 Tags = Tags
 CommentSection = Comment section
