Fix bugs in pagination and front
Allows to switch between pages with tags on.

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -49,3 +49,5 @@ Message = Mensaje
 Image = Imagen
 Post.verb = Publicar
 EnterATag = Agregar una etiqueta
+LightMode = Modo claro
+DarkMode = Modo oscuro
