--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -55,3 +55,5 @@ DarkMode = Dark mode
 Forum = Forum
 Channel = Channel
 Latest= Latest
+TagError1 = Tag: <
+TagError2 = > is not valid. Tags should only contain letters, numbers, and underscores.
