Add an i18n patch
Adding a few strings from publish page to messages.properties

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -57,3 +57,5 @@ Channel = Channel
 Latest= Latest
 TagError1 = Tag: <
 TagError2 = > is not valid. Tags should only contain letters, numbers, and underscores.
+Drop.files = Drop your files here
+Or = or
