--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -56,3 +56,5 @@ Channel = Canal
 Latest= Último
 TagError1 = Etiqueta: <
 TagError2 = > no es válida. Etiquetes debe contener únicamente letras, números, guiones bajos.
+Drop.files = Sube tus archivos aquí
+Or = o
