Fix the last commit on empty posts

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -59,3 +59,4 @@ TagError1 = Tag: <
 TagError2 = > is not valid. Tags should only contain letters, numbers, and underscores.
 Drop.files = Drop your files here
 Or = or
+Posts.notFound = No posts found
