--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -58,3 +58,4 @@ TagError1 = Etiqueta: <
 TagError2 = > no es válida. Etiquetes debe contener únicamente letras, números, guiones bajos.
 Drop.files = Sube tus archivos aquí
 Or = o
+Posts.notFound = No se encontraron publicaciones
