Add announcement emails, validations messages, etc
Creates a generic mailing method to be used with multiple template and add a template for announcements. Announcements send mail to all users. Fixes validation messages for comment forms and fixes tab name not showing

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -13,11 +13,29 @@ NotBlank.publishForm.subject = Subject field is required
 Size.publishForm.subject = Must be less than 100 characters
 
 NotBlank.publishForm.message = Message field is required
-Size.publishForm.message = Must be less than 255 characters
+Size.publishForm.message = Must be less than 2000 characters
 
 NotBlank.publishForm.email = Email field is required
 Size.publishForm.email = Must be less than 100 characters
 Email.publishForm.email = Must be a valid email address
+
+Pattern.commentForm.name = The name must only contain letters
+NotBlank.commentForm.name = Name field is required
+Size.commentForm.name = Must be less than 100 characters
+
+Pattern.commentForm.surname = The surname must only contain letters
+NotBlank.commentForm.surname = Surname field is required
+Size.commentForm.surname = Must be less than 100 characters
+
+NotBlank.commentForm.neighborhood = Neighborhood field is required
+Size.commentForm.neighborhood = Must be less than 100 characters
+
+NotBlank.commentForm.comment = Comment is required
+Size.commentForm.comment = Must be less than 255 characters
+
+NotBlank.commentForm.email = Email field is required
+Size.commentForm.email = Must be less than 100 characters
+Email.commentForm.email = Must be a valid email address
 
 
 posted = posted 
