--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -13,11 +13,29 @@ NotBlank.publishForm.subject = Sujeto requerido
 Size.publishForm.subject = Debe contener menos de 100 caracteres
 
 NotBlank.publishForm.message = Mensaje requerido
-Size.publishForm.message = Debe contener menos de 255 caracteres
+Size.publishForm.message = Debe contener menos de 2000 caracteres
 
 NotBlank.publishForm.email = Email requerido
 Size.publishForm.email = Debe contener menos de 100 caracteres
 Email.publishForm.email = Debe ser un email válido
+
+Pattern.commentForm.name = Nombre solo debe contener letras
+NotBlank.commentForm.name = Nombre requerido
+Size.commentForm.name = Debe contener menos de 100 caracteres
+
+Pattern.commentForm.surname = The surname must only contain letters
+NotBlank.commentForm.surname = Apellido requerido
+Size.commentForm.surname = Debe contener menos de 100 caracteres
+
+NotBlank.commentForm.neighborhood = Vecindario requerido
+Size.commentForm.neighborhood = Debe contener menos de 100 caracteres
+
+NotBlank.commentForm.subject = Sujeto requerido
+Size.commentForm.subject = Debe contener menos de 255 caracteres
+
+NotBlank.commentForm.email = Email requerido
+Size.commentForm.email = Debe contener menos de 100 caracteres
+Email.commentForm.email = Debe ser un email válido
 
 posted = publicado
 neiboSlogan = Eslógan
