Show verified neighbors to admins
Allowing for listing of pending registrations requests, only for
administrators in /hey

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -78,3 +78,8 @@ TagError2 = > is not valid. Tags should only contain letters, numbers, and under
 Drop.files = Drop your files here
 Or = or
 Posts.notFound = No posts found
+Accept= Accept
+Ignore = Ignore
+No.new.requests = No new requests
+No.verified.Users = No verified users
+Unverify = Unverify
