--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -77,3 +77,8 @@ TagError2 = > no es válida. Etiquetes debe contener únicamente letras, número
 Drop.files = Sube tus archivos aquí
 Or = o
 Posts.notFound = No se encontraron publicaciones
+Accept= Aceptar
+Ignore = Ignorar
+No.new.requests = No hay nuevas solicitudes
+No.verified.Users = No hay usuarios verificados
+Unverify = Desverificar
