Fix some bugs in post creation
Refactored the publish  page, still to be done for admins

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -87,6 +87,7 @@ GoBackToMainPage = Go back to main page
 Date = Date
 Subject = Subject
 Message = Message
+Text =  Text
 Image = Image
 Post.verb = Post
 EnterATag = Enter a tag
