--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -64,6 +64,7 @@ GoBackToMainPage = Volver a la página principal
 Date = Fecha
 Subject = Asunto
 Message = Mensaje
+Text =  Texto
 Image = Imagen
 Post.verb = Publicar
 EnterATag = Agregar una etiqueta
