--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -65,6 +65,7 @@ GoBackToMainPage = Go back to main page
 Date = Date
 Subject = Subject
 Message = Message
+Text =  Text
 Image = Image
 Post.verb = Post
 EnterATag = Enter a tag
