--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -90,7 +90,7 @@ Message = Message
 Text =  Text
 Image = Image
 Post.verb = Post
-EnterATag = Enter a tag
+EnterATag = Enter up to 5 tags
 LightMode = Light mode
 DarkMode = Dark mode
 Forum = Forum
