--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -67,7 +67,7 @@ Message = Mensaje
 Text =  Texto
 Image = Imagen
 Post.verb = Publicar
-EnterATag = Agregar una etiqueta
+EnterATag = Agregue hasta 5 etiquetas
 LightMode = Modo claro
 DarkMode = Modo oscuro
 Forum = Foro
