Fix postcard properties
Fixed some postcard properties like comment submition and added a
success message when posting

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -102,5 +102,8 @@ Posts.notFound = No posts found
 Accept= Accept
 Ignore = Ignore
 No.new.requests = No new requests
-No.verified.Users = No verified users
+No.verified.Users = No verified users yet
 Unverify = Unverify
+Loading= Loading
+Creating.your.post = Creating your post
+Post.created.successfully = Post created successfully!
