--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -81,5 +81,8 @@ Posts.notFound = No se encontraron publicaciones
 Accept= Aceptar
 Ignore = Ignorar
 No.new.requests = No hay nuevas solicitudes
-No.verified.Users = No hay usuarios verificados
+No.verified.Users = No hay usuarios verificados aún
 Unverify = Desverificar
+Loading = Cargando
+Creating.your.post = Creando tu publicación
+Post.created.successfully = ¡Publicación creada exitosamente!
