Allow for darkmode setting
Added user profile page where users can see their information and set
some preferences

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -87,3 +87,21 @@ Unverify = Unverify
 Loading = Loading
 Creating.your.post = Creating your post
 Post.created.successfully = Post created successfully!
+Landing.page.desc = A platform for gated communities that allows you to share news, book courts, and stay connected with your neighbors at all times.
+Login = Login
+Welcome.to.neibo = Welcome to Neibo
+Login.to.continue = Login to continue
+Remember.me = Remember me
+Not.a.member.question = Not a member?
+Signup.to.get.started = Signup to get started
+Signup = Signup
+Signup.now = Signup now
+Verify.users = Verify users
+Profile = Profile
+Information = Information
+Preferences = Preferences
+Language = Language
+Off = Off
+On = On
+English = English
+Spanish = Spanish
