--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -86,3 +86,21 @@ Unverify = Desverificar
 Loading = Cargando
 Creating.your.post = Creando tu publicación
 Post.created.successfully = ¡Publicación creada exitosamente!
+Landing.page.desc = Una plataforma para barrios cerrados que te permite compartir novedades, reservar canchas y estar conectado con tus vecinos en todo momento.
+Login = Iniciar sesión
+Welcome.to.neibo = Bienvenido a Neibo
+Login.to.continue = Iniciar sesión para continuar
+Remember.me = Recordarme!
+Not.a.member.question = ¿No eres miembro?
+Signup.to.get.started = Regístrate para empezar
+Signup = Registrarse
+Signup.now = Registrarse ahora
+Verify.users = Verificar usuarios
+Profile = Perfil
+Information = Información
+Preferences = Preferencias
+Language = Lenguaje
+Off = Apagado
+On = Encendido
+English = Inglés
+Spanish = Español
