Fix comments and create user settings box
Created user settings box and fixed bug in comment creation

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -104,3 +104,6 @@ Off = Apagado
 On = Encendido
 English = Inglés
 Spanish = Español
+Complains = Quejas
+Logout = Cerrar sesión
+LOGOUT = CERRAR SESIÓN
