Add filter by tags widget
Added filter by tags widget to be displayed in right column below the
calendar

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -108,3 +108,6 @@ Spanish = Spanish
 Complains = Complains
 Logout = Logout
 LOGOUT = LOGOUT
+Apply = Apply
+Cancel = Cancel
+Filter.by.tags = Filter by tags
