--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -107,3 +107,6 @@ Spanish = Español
 Complains = Quejas
 Logout = Cerrar sesión
 LOGOUT = CERRAR SESIÓN
+Apply = Aplicar
+Cancel = Cancelar
+Filter.by.tags = Filtrar por etiquetas
