Successfully show success messages when publishing
Fixed some implementations, messages and success feedback after posting

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -105,7 +105,7 @@ Off = Off
 On = On
 English = English
 Spanish = Spanish
-Complains = Complains
+Complaints = Complaints
 Logout = Logout
 LOGOUT = LOGOUT
 Apply = Apply
