--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -104,7 +104,7 @@ Off = Apagado
 On = Encendido
 English = Inglés
 Spanish = Español
-Complains = Quejas
+Complaints = Quejas
 Logout = Cerrar sesión
 LOGOUT = CERRAR SESIÓN
 Apply = Aplicar
