Create front side of amenity creation
There is now a page where all amenities and their hours are displayed, and another where an administrator can create a new amenity, specifying its name, description and their hours.

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -60,6 +60,16 @@ NotBlank.signupForm.password = Password field is required
 Size.signupForm.password = Must be less than 50 characters
 Pattern.signupForm.password = Invalid password format
 
+NotBlank.amenityForm.name = Name field is required
+Size.amenityForm.name = Name must be less than 100 characters
+Pattern.amenityForm.name = Name must only contain alphanumerical characters
+
+NotBlank.amenityForm.description = Description field is required
+Size.amenityForm.description = Description must be less than 1000 characters
+Pattern.amenityForm.description = Description must only contain alphanumerical characters
+
+TimeOrder.amenityForm = The closing time must be after the opening time
+
 posted = posted 
 neiboSlogan = Slogan
 Announcements = Announcements
@@ -125,3 +135,8 @@ Off = Off
 On = On
 English = English
 Spanish = Spanish
+CreateNewAmenity.button = Create Amenity
+Description = Description
+OpeningClosingTimes= Opening and closing times
+Create.verb= Create
+AmenityHours= Amenity hours
