Add i18n for calendar

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -125,3 +125,32 @@ Description = Descripción
 OpeningClosingTimes= Horarios de apertura y cierre
 Create.verb= Crear
 AmenityHours= Horarios de Amenidad
+
+days.monday = Lunes
+days.tuesday = Martes
+days.wednesday = Miércoles
+days.thursday = Jueves
+days.friday = Viernes
+days.saturday = Sábado
+days.sunday = Domingo
+
+dayInitials.monday = L
+dayInitials.tuesday = M
+dayInitials.wednesday = M
+dayInitials.thursday = J
+dayInitials.friday = V
+dayInitials.saturday = S
+dayInitials.sunday = D
+
+month.january = Enero
+month.february = Febrero
+month.march = Marzo
+month.april = Abril
+month.may = Mayo
+month.june = Junio
+month.july = Julio
+month.august = Agosto
+month.september = Septiembre
+month.october = Octubre
+month.november = Noviembre
+month.december = Diciembre
