--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -147,3 +147,32 @@ Description = Description
 OpeningClosingTimes= Opening and closing times
 Create.verb= Create
 AmenityHours= Amenity hours
+
+days.monday = Monday
+days.tuesday = Tuesday
+days.wednesday = Wednesday
+days.thursday = Thursday
+days.friday = Friday
+days.saturday = Saturday
+days.sunday = Sunday
+
+dayInitials.monday = M
+dayInitials.tuesday = T
+dayInitials.wednesday = W
+dayInitials.thursday = T
+dayInitials.friday = F
+dayInitials.saturday = S
+dayInitials.sunday = S
+
+month.january=January
+month.february=February
+month.march=March
+month.april=April
+month.may=May
+month.june=June
+month.july=July
+month.august=August
+month.september=September
+month.october=October
+month.november=November
+month.december=December
