Handle signup and login messages

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -141,6 +141,12 @@ LOGOUT = LOGOUT
 Apply = Apply
 Cancel = Cancel
 Filter.by.tags = Filter by tags
+Successfully.signup = Congratulations! Your account has been successfully created!
+
+Welcome.frase.1=Hello, you're one step away from becoming a neighbor!
+Welcome.frase.2=We've already sent your request to the administration,
+Welcome.frase.3=we are configuring your account to provide you with the best experience.
+Welcome.frase.4=We will notify you when your account is ready.
 
 CreateNewAmenity.button = Create Amenity
 Description = Description
