--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -120,6 +120,14 @@ LOGOUT = CERRAR SESIÓN
 Apply = Aplicar
 Cancel = Cancelar
 Filter.by.tags = Filtrar por etiquetas
+Successfully.signup = ¡Te registraste exitosamente!
+
+
+Welcome.frase.1=¡Hola, estás a un paso de finalizar!
+Welcome.frase.2=Ya eviamos tu solicitud a la administración,
+Welcome.frase.3=estamos configurando tu cuenta para que tengas la mejor experiencia.
+Welcome.frase.4=Te avisaremos cuando esté lista.
+
 CreateNewAmenity.button = Crear Amenidad
 Description = Descripción
 OpeningClosingTimes= Horarios de apertura y cierre
