Start fixing one of the main bullet points in todo
Added feedback on signup and login

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -128,6 +128,9 @@ Welcome.frase.2=Ya eviamos tu solicitud a la administración,
 Welcome.frase.3=estamos configurando tu cuenta para que tengas la mejor experiencia.
 Welcome.frase.4=Te avisaremos cuando esté lista.
 
+Login.error.message = Lo sentimos, no pudimos iniciar sesión. Por favor, verifica tu correo electrónico y contraseña y vuelve a intentarlo. 
+
+
 CreateNewAmenity.button = Crear Amenidad
 Description = Descripción
 OpeningClosingTimes= Horarios de apertura y cierre
