Add front implementation of reservations
Page where neighbors can view all the amenities and their opening/closing times and create a reservation

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -165,3 +165,5 @@ month.september = Septiembre
 month.october = Octubre
 month.november = Noviembre
 month.december = Diciembre
+
+Reserve = Reservar
