--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -182,3 +182,11 @@ month.september=September
 month.october=October
 month.november=November
 month.december=December
+
+Minutes=minutes
+
+Events.notFound = No events found
+
+CreateNewEvent.button = Create new event
+
+date.format={0} {1} {2}
