--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -162,3 +162,11 @@ month.september = Septiembre
 month.october = Octubre
 month.november = Noviembre
 month.december = Diciembre
+
+Minutes=minutos
+
+Events.notFound = No se encontraron eventos
+
+CreateNewEvent.button = Crear nuevo evento
+
+date.format={0} de {1} de {2}
