Add identification to signup

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -177,3 +177,5 @@ Events.notFound = No events found
 CreateNewEvent.button = Create new event
 
 date.format={0} {1} {2}
+
+SaveChanges = Save Changes
