--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -175,3 +175,5 @@ Events.notFound = No se encontraron eventos
 CreateNewEvent.button = Crear nuevo evento
 
 date.format={0} de {1} de {2}
+
+SaveChanges = Guardar Cambios
