Add a small bug fix

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -173,7 +173,7 @@ Reserve = Reserve
 Minutes=minutes
 
 Events.notFound = No events found
-
+Events = Events
 CreateNewEvent.button = Create new event
 
 date.format={0} {1} {2}
