--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -171,6 +171,7 @@ Reserve = Reservar
 Minutes=minutos
 
 Events.notFound = No se encontraron eventos
+Events = Eventos
 
 CreateNewEvent.button = Crear nuevo evento
 
