Create information tab front & back logic
Implementation of back-end methods for creation of neighborhood contacts and resources. Front-end implementation for neighbor viewing of this information, but no implementation for administrator creation of this data yet

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -87,6 +87,10 @@ CommentSection = Comment section
 Name = Name
 Surname = Surname
 Email = E-Mail
+Address = Address
+PhoneNumber = Phone number
+ContactInformation = Contact information
+Contacts.notFound = No contacts found
 Neighborhood = Neighborhood
 Comment = Comment
 Comment.verb = Comment
@@ -196,3 +200,5 @@ CreateNewEvent.button = Create new event
 date.format={0} {1} {2}
 
 SaveChanges = Save Changes
+
+Reservations = Reservations
