--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -65,6 +65,10 @@ CommentSection = Comment section
 Name = Name
 Surname = Surname
 Email = E-Mail
+Address = Address
+PhoneNumber = Phone number
+ContactInformation = Contact information
+Contacts.notFound = No contacts found
 Neighborhood = Neighborhood
 Comment = Comment
 Comment.verb = Comment
@@ -169,6 +173,7 @@ month.november=November
 month.december=December
 
 Reserve = Reserve
+Reservations = Reservations
 
 Minutes=minutes
 
