--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -64,6 +64,10 @@ CommentSection = Sección de comentarios
 Name = Nombre
 Surname = Apellido
 Email = Correo electrónico
+Address = Dirección
+PhoneNumber = Número de teléfono
+ContactInformation = Información de contacto
+Contacts.notFound = No se encontraron contactos
 Neighborhood = Vecindario
 Comment = Comentario
 Comment.verb = Comentar
@@ -167,6 +171,7 @@ month.november = Noviembre
 month.december = Diciembre
 
 Reserve = Reservar
+Reservations = Reservas
 
 Minutes=minutos
 
