Fix i18n errors and admin amenities
Created i18n messages for neighbors' amenities page and fixed admin amenities page aesthetics

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -202,3 +202,11 @@ date.format={0} {1} {2}
 SaveChanges = Save Changes
 
 Reservations = Reservations
+MakeReservation = Make a Reservation
+SelectAmenity = Select an Amenity:
+ChooseDate = Choose a Date:
+StartTime = Start Time:
+EndTime = End Time:
+Day = Day
+Open = Open
+Close = Close
