--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -172,6 +172,14 @@ month.december = Diciembre
 
 Reserve = Reservar
 Reservations = Reservas
+MakeReservation = Crear una Reserva
+SelectAmenity = Seleccionar una Amenidad:
+ChooseDate = Elegir Fecha:
+StartTime = Hora de Inicio:
+EndTime = Hora de Fin:
+Day = Día
+Open = Apertura
+Close = Cierre
 
 Minutes=minutos
 
