--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -174,6 +174,14 @@ month.december=December
 
 Reserve = Reserve
 Reservations = Reservations
+MakeReservation = Make a Reservation
+SelectAmenity = Select an Amenity:
+ChooseDate = Choose a Date:
+StartTime = Start Time:
+EndTime = End Time:
+Day = Day
+Open = Open
+Close = Close
 
 Minutes=minutes
 
