Allow admins to create/delete contacts
Creation of admin page for manipulation of contacts

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -37,6 +37,33 @@ NotBlank.commentForm.email = Email field is required
 Size.commentForm.email = Must be less than 100 characters
 Email.commentForm.email = Must be a valid email address
 
+Pattern.postForm.name = The name must contain at least one uppercase, one lowercase and one number
+NotBlank.postForm.name = Name field is required
+Size.postForm.name = Must be at least 8 characters and less than 100 characters
+
+Pattern.signupForm.name = The name must only contain letters
+NotBlank.signupForm.name = Name field is required
+Size.signupForm.name = Must be less than 100 characters
+
+Pattern.signupForm.surname = The surname must only contain letters
+NotBlank.signupForm.surname = Surname field is required
+Size.signupForm.surname = Must be less than 100 characters
+
+NotBlank.signupForm.neighborhood = Neighborhood field is required
+Size.signupForm.neighborhood = Must be less than 100 characters
+
+NotBlank.signupForm.mail = Email field is required
+Size.signupForm.mail = Must be less than 100 characters
+Email.signupForm.mail = Must be a valid email address
+
+NotBlank.signupForm.password = Password field is required
+Size.signupForm.password = Must be less than 50 characters
+Pattern.signupForm.password = Invalid password format
+
+Pattern.signupForm.identification = The identification must only contain numbers
+Size.signupForm.identification = Identification must be between 1-9 numbers
+NotBlank.signupForm.identification = Identification field is required
+
 NotBlank.amenityForm.name = Name field is required
 Size.amenityForm.name = Name must be less than 100 characters
 Pattern.amenityForm.name = Name must only contain alphanumerical characters
@@ -47,6 +74,13 @@ Pattern.amenityForm.description = Description must only contain alphanumerical c
 
 TimeOrder.amenityForm = The closing time must be after the opening time
 
+NotBlank.contactForm.contactName=Name field is required
+Size.contactForm.contactName=Must be less than 64 characters
+
+Size.contactForm.contactAddress=Must be less than 64 characters
+
+NotBlank.contactForm.contactPhone=Phone field is required
+Size.contactForm.contactPhone=Must be less than 20 characters
 
 posted = posted 
 neiboSlogan = Slogan
@@ -88,8 +122,6 @@ DarkMode = Dark mode
 Forum = Forum
 Channel = Channel
 Latest= Latest
-TagError1 = Tag: <
-TagError2 = > is not valid. Tags should only contain letters, numbers, and underscores.
 Drop.files = Drop your files here
 Or = or
 Posts.notFound = No posts found
@@ -98,20 +130,20 @@ Ignore = Ignore
 No.new.requests = No new requests
 No.verified.Users = No verified users yet
 Unverify = Unverify
-Loading = Loading
+Loading= Loading
 Creating.your.post = Creating your post
 Post.created.successfully = Post created successfully!
 Landing.page.desc = A platform for gated communities that allows you to share news, book courts, and stay connected with your neighbors at all times.
 Login = Login
 Welcome.to.neibo = Welcome to Neibo
 Login.to.continue = Login to continue
-Remember.me = Remember me
+Remember.me = Remember me!
 Not.a.member.question = Not a member?
 Signup.to.get.started = Signup to get started
 Signup = Signup
 Signup.now = Signup now
 Verify.users = Verify users
-Profile = Profile
+Profile= Profile
 Information = Information
 Preferences = Preferences
 Language = Language
@@ -127,15 +159,12 @@ Cancel = Cancel
 Filter.by.tags = Filter by tags
 Successfully.signup = Congratulations! Your account has been successfully created!
 
-
-
 Welcome.frase.1=Hello, you're one step away from becoming a neighbor!
 Welcome.frase.2=We've already sent your request to the administration,
 Welcome.frase.3=we are configuring your account to provide you with the best experience.
 Welcome.frase.4=We will notify you when your account is ready.
 
 Login.error.message = Sorry, we couldn't log you in. Please check your email and password and try again.
-
 
 CreateNewAmenity.button = Create Amenity
 Description = Description
@@ -173,15 +202,6 @@ month.november=November
 month.december=December
 
 Reserve = Reserve
-Reservations = Reservations
-MakeReservation = Make a Reservation
-SelectAmenity = Select an Amenity:
-ChooseDate = Choose a Date:
-StartTime = Start Time:
-EndTime = End Time:
-Day = Day
-Open = Open
-Close = Close
 
 Minutes=minutes
 
@@ -192,3 +212,20 @@ CreateNewEvent.button = Create new event
 date.format={0} {1} {2}
 
 SaveChanges = Save Changes
+
+Reservations = Reservations
+MakeReservation = Make a Reservation
+SelectAmenity = Select an Amenity:
+ChooseDate = Choose a Date:
+StartTime = Start Time:
+EndTime = End Time:
+Day = Day
+Open = Open
+Close = Close
+Add = Add
+
+CreateContact = Create Contact
+ContactName = Contact Name
+ContactAddress = Contact Address
+ContactPhone = Contact Phone Number
+Contact.created.successfully = Contact created successfully!
