--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -37,6 +37,33 @@ NotBlank.commentForm.email = Email requerido
 Size.commentForm.email = Debe contener menos de 100 caracteres
 Email.commentForm.email = Debe ser un email válido
 
+Pattern.postForm.name = Nombre solo debe contener letras
+NotBlank.postForm.name = Nombre requerido
+Size.postForm.name = Debe contener menos de 100 caracteres
+
+Pattern.signupForm.name = Nombre solo debe contener letras
+NotBlank.signupForm.name = Nombre requerido
+Size.signupForm.name = Debe contener menos de 64 caracteres
+
+Pattern.signupForm.surname = Apellido solo debe contener letras
+NotBlank.signupForm.surname = Apellido requerido
+Size.signupForm.surname = Debe contener menos de 64 caracteres
+
+NotBlank.signupForm.neighborhood = Neighborhood field is required
+Size.signupForm.neighborhood = Must be less than 100 characters
+
+NotBlank.signupForm.mail = Email requerido
+Size.signupForm.mail = Debe contener menos de 128 caracteres
+Email.signupForm.mail = Debe ser un email válido
+
+NotBlank.signupForm.password = Contraseña requerida
+Size.signupForm.password = Debe contener menos de 50 caracteres
+Pattern.signupForm.password = Contraseña solo debe contener letras y números
+
+Pattern.signupForm.identification = Identificación solo debe contener números
+Size.signupForm.identification = Debe contener entre 1-9 caracteres
+NotBlank.signupForm.identification = Identificación requerida
+
 NotBlank.amenityForm.name = Nombre requerido
 Size.amenityForm.name = Nombre debe contener menos de 100 caracteres
 Pattern.amenityForm.name = Nombre debe contener solo letras
@@ -46,6 +73,14 @@ Size.amenityForm.description = Descripcioón debe contener menos de 1000 caracte
 Pattern.amenityForm.description = Descripción debe contener solo letras
 
 TimeOrder.amenityForm = Horario de cierre debe ser luego de horario de apertura
+
+NotBlank.contactForm.contactName= Nombre requerido
+Size.contactForm.contactName= Debe contener menos de 64 caracteres
+
+Size.contactForm.contactAddress= Debe contener menos de 64 caracteres
+
+NotBlank.contactForm.contactPhone= Número de teléfono requerido
+Size.contactForm.contactPhone= Debe contener menos de 20 caracteres
 
 posted = publicado
 neiboSlogan = Eslógan
@@ -191,3 +226,11 @@ CreateNewEvent.button = Crear nuevo evento
 date.format={0} de {1} de {2}
 
 SaveChanges = Guardar Cambios
+
+Add = Agregar
+
+CreateContact = Crear Contacto
+ContactName = Nombre de Contacto
+ContactAddress = Dirección de Contacto
+ContactPhone = Teléfono de Contacto
+Contact.created.successfully = ¡Contacto creado exitosamente!
