i14e landing page and allow for user verification

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -213,3 +213,8 @@ EndTime = End Time:
 Day = Day
 Open = Open
 Close = Close
+
+
+First.name = First name
+Password = Password
+Identification = Identification
