--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -193,3 +193,8 @@ CreateNewEvent.button = Create new event
 date.format={0} {1} {2}
 
 SaveChanges = Save Changes
+
+
+First.name = First name
+Password = Password
+Identification = Identification
