--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -192,3 +192,8 @@ CreateNewEvent.button = Crear nuevo evento
 date.format={0} de {1} de {2}
 
 SaveChanges = Guardar Cambios
+
+
+First.name = Nombre
+Password = Contraseña
+Identification = DNI
