--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -235,3 +235,8 @@ ContactName = Nombre de Contacto
 ContactAddress = Dirección de Contacto
 ContactPhone = Teléfono de Contacto
 Contact.created.successfully = ¡Contacto creado exitosamente!
+
+CreateResource = Crear Recurso
+Title = Título
+Resource.created.successfully = ¡Recurso creado exitosamente!
+AddResource = Agregar Recurso
