Improve admin panel layout
Admin panel left column with correct tabs/sections and their routings

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -243,3 +243,8 @@ AddResource = Add Resource
 First.name = First name
 Password = Password
 Identification = Identification
+
+Amenities = Amenities
+NeighborList = Neighbor List
+CreateAnnouncement = Announce
+Requests = Requests
