--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -241,6 +241,11 @@ Title = Título
 Resource.created.successfully = ¡Recurso creado exitosamente!
 AddResource = Agregar Recurso
 
+Amenities = Amenidades
+NeighborList = Lista de Vecinos
+CreateAnnouncement = Crear Anuncio
+Requests = Solicitudes
+
 First.name = Nombre
 Password = Contraseña
 Identification = DNI
