--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -241,3 +241,8 @@ CreateResource = Create Resource
 Title = Title
 Resource.created.successfully = Resource created successfully!
 AddResource = Add Resource
+
+Amenities = Amenities
+NeighborList = Neighbor List
+CreateAnnouncement = Announce
+Requests = Requests
