Allow users to change profile picture
Ability to change profile pictures and correct display of these in webpage

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -248,3 +248,5 @@ Amenities = Amenities
 NeighborList = Neighbor List
 CreateAnnouncement = Announce
 Requests = Requests
+
+ChangeImage = Change Image
