--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -246,3 +246,5 @@ Amenities = Amenities
 NeighborList = Neighbor List
 CreateAnnouncement = Announce
 Requests = Requests
+
+ChangeImage = Change Image
